terraform/kubernetes/gatewayapi/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: frontend-ingress
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
#spec:
#  ingressClassName: nginx
#  tls:
#    - hosts:
#        - kiddify.pl
#      secretName: kiddify-tls-secret
#  rules:
#    - host: kiddify.pl
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: frontend-svc
#                port:
#                  number: 80
